--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,16 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": ["examples/*"],
+  "packages": [
+    "examples/*",
+    "config/*"
+  ],
   "command": {
     "version": {
-      "allowBranch":["master", "feature/*"],
+      "allowBranch": [
+        "master",
+        "feature/*"
+      ],
       "conventionalCommits": true,
       "exact": true
     }
