--- a/config/webpack/package.json
+++ b/config/webpack/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "exit 0 || true"
     },
-    "devDependencies": {
+    "dependencies": {
         "compression-webpack-plugin": "2.0.0",
         "execa": "1.0.0",
         "friendly-errors-webpack-plugin": "1.7.0",
