--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -14,28 +14,27 @@
   "_module": "dist/foo-bar.es5.js",
   "_typings": "dist/types/foo-bar.d.ts",
   "scripts": {
-    "test": "jest --notify",
-    "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
+    "build": "del dist && microbundle build src/index.ts -o dist --target web -f umd",
+    "clean": "git clean -dxf -e node_modules",
     "compile": "run-p -l compile:*",
-    "compile:ts": "rimraf dist && tsc -b tsconfig.json",
     "compile:js": "babel src --root-mode upward --verbose --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "build": "rimraf dist && microbundle build src/index.ts -o dist --target web -f umd",
-    "dist": "NODE_ENV=production webpack --config ../../config/webpack/index.ts --colors --hide-modules --display-error-details"
+    "compile:ts": "del dist && tsc -b tsconfig.json",
+    "dist": "NODE_ENV=production webpack --config ../../config/webpack/index.ts --colors --hide-modules --display-error-details",
+    "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
+    "test": "jest --notify"
   },
   "files": [
     "dist/*",
     "index.d.ts"
   ],
-  "devDependencies": {
-    "microbundle": "0.11.0",
-    "prettier": "1.16.4",
-    "typescript": "3.3.4000"
-  },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@scope/example-lib1": "*",
-    "typescript-tslint-plugin": "0.3.1"
+    "typescript-tslint-plugin": "0.3.1",
+    "microbundle": "0.11.0",
+    "prettier": "1.16.4",
+    "typescript": "3.3.4000"
   }
 }
