--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "fix": "prettier --write \"examples/**/*.ts\" && yarn lint",
     "install:yarn": "npm install yarn@`node -p -e \"require('./package.json').dependencies.yarn\"` --ignore-scripts --no-save --no-optional --no-package-lock",
     "lint": "lerna run lint --parallel",
-    "postinstall": "node node_modules/husky/husky.js install",
-    "preinstall": "rm -f .git/hooks/pre-commit || true",
+    "postinstall": "del package-lock.json && node node_modules/husky/husky.js install",
+    "preinstall": "del .git/hooks/pre-commit || true",
     "prettier:": "prettier --write \"examples/**/*.ts\"",
     "test": "jest -c config/jest/jest.config.js",
     "test:watch": "yarn test -- --watch --notify",
@@ -58,13 +58,6 @@
     "useTabs": false,
     "parser": "typescript"
   },
-  "devDependencies": {
-    "@babel/register": "7.4.0",
-    "del-cli": "1.1.0",
-    "husky": "1.3.1",
-    "lint-staged": "8.1.5",
-    "prettier": "1.16.4"
-  },
   "dependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "7.4.0",
@@ -72,13 +65,17 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "7.4.0",
     "@types/jest": "24.0.11",
     "babel-plugin-loop-optimizer": "1.4.1",
-    "envinfo": "7.1.0",
+    "del-cli": "1.1.0",
+    "husky": "1.3.1",
     "jest": "24.5.0",
     "jest-cli": "24.5.0",
     "lerna": "^3.13.1",
+    "lint-staged": "8.1.5",
     "npm-run-all": "4.1.5",
+    "prettier": "1.16.4",
     "ts-jest": "24.0.0",
     "tslint": "5.14.0",
     "tslint-config-prettier": "1.18.0",
