Only allow pushing new versions on master branch

--- a/lerna.json
+++ b/lerna.json
@@ -8,8 +8,7 @@
   "command": {
     "version": {
       "allowBranch": [
-        "master",
-        "feature/*"
+        "master"
       ],
       "conventionalCommits": true,
       "exact": true
