--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "ci": "./bin/ci",
     "clean": "git clean -dxf -e node_modules",
     "compile": "tsc -b tsconfig.json",
-    "fix": "prettier --write \"examples/**/*.ts\" && yarn lint",
+    "fix": "yarn prettier && yarn lint",
     "install:yarn": "npm install yarn@`node -p -e \"require('./package.json').dependencies.yarn\"` --ignore-scripts --no-save --no-optional --no-package-lock",
-    "lint": "lerna run lint --parallel",
+    "lint": "tslint -c tslint.json \"bin/*.ts\" --fix && lerna run lint --parallel",
     "postinstall": "del package-lock.json && node node_modules/husky/husky.js install",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
-    "prettier:": "prettier --write \"examples/**/*.ts\"",
+    "prettier": "prettier --write \"examples/**/*.ts\" \"bin/*.ts\"",
     "test": "jest -c config/jest/jest.config.js",
     "test:watch": "yarn test -- --watch --notify",
     "test:serial": "lerna exec -- yarn test"
@@ -66,9 +66,11 @@
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "7.4.0",
+    "@types/fs-extra": "5.0.5",
     "@types/jest": "24.0.11",
     "babel-plugin-loop-optimizer": "1.4.1",
     "del-cli": "1.1.0",
+    "fs-extra": "7.0.1",
     "husky": "1.3.1",
     "jest": "24.5.0",
     "jest-cli": "24.5.0",
@@ -77,6 +79,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.16.4",
     "ts-jest": "24.0.0",
+    "ts-node": "8.0.3",
     "tslint": "5.14.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "8.0.1",
