Run build before running tests
Replace globals.ts by globals.js
Changing typescript configuration

--- a/examples/example-nightwatch1/tsconfig.json
+++ b/examples/example-nightwatch1/tsconfig.json
@@ -4,7 +4,12 @@
     "tests/**/*.ts"
   ],
   "compilerOptions": {
-    "module": "esnext",
+    "module": "commonjs",
     "outDir": "dist",
+    "moduleResolution": "node",
+    "target": "es5",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "rootDir": "tests"
   }
 }
