--- a/examples/example-nightwatch1/package.json
+++ b/examples/example-nightwatch1/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "example-nightwatch1",
+  "name": "@scope/example-nightwatch1",
   "private": true,
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "test": "./node_modules/.bin/nightwatch",
+    "clean": "rm -rf dist",
+    "build": "tsc -b tsconfig.json",
+    "test": "yarn clean && yarn build && nightwatch",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame"
   },
   "dependencies": {
