Update ignore settings

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,17 @@
-dist/
+.*
+.*cache*
+.tmp
+*.lock
+*.log
+*.ejs
+Jenkinsfile
+*.properties
+*.xml
+**/package.json
+**/tsconfig*.json
+bin/*
+build
+dist
+LICENSE
+node_modules
 package-lock.json
-package.json
-yarn.lock
