--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# Test report directory used by Nightwatch
+reports
+
 # nyc test coverage
 .nyc_output
 
