--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,84 +1,93 @@
+// ========================================================================
+// 💥 Typescript configuration
+//
+//    Documentation:
+//
+//    http://json.schemastore.org/tsconfig
+//    https://www.typescriptlang.org/docs/handbook/compiler-options.html
+//    https://basarat.gitbooks.io/typescript/content/docs/project/tsconfig.html
+//
+// ========================================================================s
 {
-  "filesGlob": ["types/**/*.d.ts", "**/*.d.ts", "**/*.ts", "**/*.tsx"],
-  "references": [
-    //{ "path": "examples/*", }
-  ],
+  "include": ["**/*.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": [
     // Test files are already covered by Jest
     "**/*.test.ts",
-    "node_modules",
-    "dist",
-    "typings/browser.d.ts",
+    "**/node_modules/**",
+    "**/dist/**",
+    "typings/browser.d.ts"
   ],
+
+  // ========================================================================
+  // 💥 References projects ( https://www.typescriptlang.org/docs/handbook/project-references.html )
+  // ========================================================================s
+  "references": [],
 
   "compilerOptions": {
 
     // ========================================================================
     // 💥 Plugins
     // ========================================================================s
-    "plugins": [
-      { "name": "typescript-tslint-plugin" }
-    ],
+    "plugins": [{ "name": "typescript-tslint-plugin" }],
 
 
     // ========================================================================s
     // 💥 Basic options
-    // ========================================================================s
-    "target": "esnext",                       // Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'.
-    "module": "commonjs",                     // Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
-    "lib": ["es2015", "es2016", "es2017", "dom"], // Specify library files to be included in the compilation.
-    // "allowJs": true,                       // Allow javascript files to be compiled.
-    // "checkJs": true,                       // Report errors in .js files.
-    // "jsx": "preserve",                     // Specify JSX code generation: 'preserve', 'react-native', or 'react'.
-    "declaration": true,                      // Generates corresponding '.d.ts' file.
-    "declarationMap": true,                   // Generates a sourcemap for each corresponding '.d.ts' file.
-    "sourceMap": true,                        // Generates corresponding '.map' file.
-    // "outFile": "./",                       // Concatenate and emit output to single file.
-    "outDir": "dist",                         // Redirect output structure to the directory.
-    "rootDir": ".",                           // Specify the root directory of input files. Use to control the output directory structure with --outDir.
-    // "composite": true,                     // Enable project compilation
-    // "removeComments": true,                // Do not emit comments to output.
-    "noEmit": false,                          // Do not emit outputs.
-    "importHelpers": true,                    // Import emit helpers from 'tslib'.
-    // "downlevelIteration": true,            // Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'.
-    // "isolatedModules": true,               // Transpile each file as a separate module (similar to 'ts.transpileModule').
-    "pretty": true,
-    "diagnostics": true,
+    // =======================s=================================================s
+    "declaration": true,                          // 🔅 Generates corresponding '.d.ts' file.
+    "declarationMap": true,                       // 🔅 Generates a sourcemap for each corresponding '.d.ts' file.
+    "importHelpers": true,                        // 🔅 Import emit helpers from 'tslib'.
+    "lib": ["es2015", "es2016", "es2017", "dom"], // 🔅 Specify library files to be included in the compilation.
+    "module": "commonjs",                         // 🔅 Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
+    "noEmit": true,                               // 🔅 Do not emit outputs.
+    "outDir": "dist",                             // 🔅 Redirect output structure to the directory.
+    "rootDir": ".",                               // 🔅 Specify the root directory of input files. Use to control the output directory structure with --outDir.
+    "sourceMap": true,                            // 🔅 Allow javascript files to be compiled.
+    "target": "esnext",                           // 🔅 Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'.
+    // "allowJs": true,                           // 🔅 Report errors in .js files.
+    // "checkJs": true,                           // 🔅 Generates corresponding '.map' file.
+    // "composite": true,                         // 🔅 Enable project compilation
+    // "downlevelIteration": true,                // 🔅 Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'.
+    // "isolatedModules": true,                   // 🔅 Transpile each file as a separate module (similar to 'ts.transpileModule').
+    // "jsx": "preserve",                         // 🔅 Specify JSX code generation: 'preserve', 'react-native', or 'react'.
+    // "outFile": "./",                           // 🔅 Concatenate and emit output to single file.
+    // "removeComments": true,                    // 🔅 Do not emit comments to output.
+    // "skipLibCheck": true,                      // 🔅 Skip type checking of all declaration files (*.d.ts).
 
 
     // ========================================================================s
     // 💥 Strict Type-Checking Options
     // ========================================================================s
-    "strict": true,                           // Enable all strict type-checking options.
-    "noImplicitAny": false,                   // Raise error on expressions and declarations with an implied 'any' type.
-    // "strictNullChecks": true,              // Enable strict null checks.
-    // "strictFunctionTypes": true,           // Enable strict checking of function types.
-    // "strictPropertyInitialization": true,  // Enable strict checking of property initialization in classes.
-    // "noImplicitThis": true,                // Raise error on 'this' expressions with an implied 'any' type.
-    // "alwaysStrict": true,                  // Parse in strict mode and emit "use strict" for each source file.
+    "strict": true,                           // 🔅 Enable all strict type-checking options.
+    "noImplicitAny": false,                   // 🔅 Raise error on expressions and declarations with an implied 'any' type.
+    // "strictNullChecks": true,              // 🔅 Enable strict null checks.
+    // "strictFunctionTypes": true,           // 🔅 Enable strict checking of function types.
+    // "strictPropertyInitialization": true,  // 🔅 Enable strict checking of property initialization in classes.
+    // "noImplicitThis": true,                // 🔅 Raise error on 'this' expressions with an implied 'any' type.
+    // "alwaysStrict": true,                  // 🔅 Parse in strict mode and emit "use strict" for each source file.
 
 
     // ========================================================================s
     // 💥 Additional Checks
     // ========================================================================s
-    // "noUnusedLocals": true,                // Report errors on unused locals.
-    // "noUnusedParameters": true,            // Report errors on unused parameters.
-    // "noImplicitReturns": true,             // Report error when not all code paths in function return a value.
-    // "noFallthroughCasesInSwitch": true,    // Report errors for fallthrough cases in switch statement.
+    // "noUnusedLocals": true,                // 🔅 Report errors on unused locals.
+    // "noUnusedParameters": true,            // 🔅 Report errors on unused parameters.
+    // "noImplicitReturns": true,             // 🔅 Report error when not all code paths in function return a value.
+    // "noFallthroughCasesInSwitch": true,    // 🔅 Report errors for fallthrough cases in switch statement.
 
 
     // ========================================================================s
     // 💥 Module Resolution Options
     // ========================================================================s
-    "moduleResolution": "node",               // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
+    "allowSyntheticDefaultImports": true,     // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "baseUrl": ".",                           // Base directory to resolve non-absolute module names.
+    "esModuleInterop": true,                  // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
+    "moduleResolution": "node",               // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
     // "paths": {},                           // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
+    // "preserveSymlinks": true,              // Do not resolve the real path of symlinks.
     // "rootDirs": [],                        // List of root folders whose combined content represents the structure of the project at runtime.
     // "typeRoots": [],                       // List of folders to include type definitions from.
     // "types": [],                           // Type declaration files to be included in compilation.
-    "allowSyntheticDefaultImports": true,     // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
-    "esModuleInterop": true,                  // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
-    // "preserveSymlinks": true,              // Do not resolve the real path of symlinks.
 
 
     // ========================================================================s
@@ -94,11 +103,12 @@
     // 💥 Experimental Options
     // ========================================================================s
     "experimentalDecorators": true,           // Enables experimental support for ES7 decorators.
-    "emitDecoratorMetadata": true,            // Enables experimental support for emitting type metadata for decorators.
+    "emitDecoratorMetadata": true             // Enables experimental support for emitting type metadata for decorators.
+
 
     // ========================================================================s
     // 💥 Advanced Options
     // ========================================================================s
-    "declarationDir": "dist/types"            // Output directory for generated declaration files.
+    // "declarationDir": "dist/types"         // Output directory for generated declaration files.
   }
 }
