--- a/.prettierignore
+++ b/.prettierignore
@@ -1,17 +1,21 @@
 .*
 .*cache*
 .tmp
+*-report.json
+*.ejs
 *.lock
 *.log
-*.ejs
-Jenkinsfile
 *.properties
 *.xml
 **/package.json
-**/tsconfig*.json
+tsconfig.json
+tsconfig*.json
 bin/*
 build
+coverage
 dist
+Jenkinsfile
 LICENSE
 node_modules
 package-lock.json
+reports
