--- a/examples/example-nightwatch1/tsconfig.json
+++ b/examples/example-nightwatch1/tsconfig.json
@@ -10,6 +10,7 @@
     "target": "es5",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "rootDir": "tests"
+    "rootDir": "tests",
+    "noEmit": false
   }
 }
