--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     // 💥 Basic options
     // =======================s=================================================s
     "declaration": true,                          // 🔅 Generates corresponding '.d.ts' file.
-    "declarationMap": true,                       // 🔅 Generates a sourcemap for each corresponding '.d.ts' file.
+    "declarationMap": false,                      // 🔅 Generates a sourcemap for each corresponding '.d.ts' file.
     "importHelpers": true,                        // 🔅 Import emit helpers from 'tslib'.
     "lib": ["es2015", "es2016", "es2017", "dom"], // 🔅 Specify library files to be included in the compilation.
     "module": "commonjs",                         // 🔅 Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
