--- a/tsconfig.json
+++ b/tsconfig.json
@@ -91,7 +91,10 @@
     // "paths": {},                           // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
     // "preserveSymlinks": true,              // Do not resolve the real path of symlinks.
     // "rootDirs": [],                        // List of root folders whose combined content represents the structure of the project at runtime.
-    // "typeRoots": [],                       // List of folders to include type definitions from.
+    "typeRoots": [
+      "node_modules/@types",
+      "types"
+    ],                       // List of folders to include type definitions from.
     // "types": [],                           // Type declaration files to be included in compilation.
 
 
