--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -19,7 +19,7 @@
     "clean": "git clean -dxf -e node_modules",
     "compile": "del dist && tsc -b tsconfig.json",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
-    "test": "jest --notify"
+    "test": "jest -w 2 --notify"
   },
   "dependencies": {
     "microbundle": "0.11.0",
