--- a/config/helpers-cli/package.json
+++ b/config/helpers-cli/package.json
@@ -2,7 +2,7 @@
   "name": "@config/helpers",
   "version": "0.0.0-test-only",
   "description": "Configuration Helpers",
-  "main": "index.ts",
+  "main": "helpers-cli.js",
   "private": true,
   "engines": {
     "node": "10.x",
