--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint": "tslint -c tslint.json --project tsconfig.root.json --fix && lerna run lint --parallel",
     "postinstall": "git config --local include.path ../.gitconfig && del package-lock.json && node node_modules/husky/husky.js install",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
-    "prettier": "prettier --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
+    "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "run-p -l test:unit test:e2e",
     "test:unit": "jest -w 2 -c config/jest/jest.config.js",
     "test:e2e": "lerna run test:e2e",
