--- a/.gitignore
+++ b/.gitignore
@@ -139,8 +139,10 @@ dist
 .cache
 
 # Don't allow both yarn.lock & package-lock.json
-package-lock.json
-examples/**/yarn.lock
+**/package-lock.json
+**/yarn.lock
+!/yarn.lock
+
 
 # Don't allow a mix of ts and js files in this repository...
 examples/*.js
@@ -149,7 +151,6 @@ src/*.js
 *.js
 
 # ...except config files (babel.config.js, jest.config.base.js etc)
-!.*.js
 !*.conf*.js
 !/config/**/*.js
 # ...and some extra files
