Temporary fix for Chromedriver out of sync with Chromium

--- a/.yarnrc
+++ b/.yarnrc
@@ -5,3 +5,5 @@ progress true
 ignore-optional false
 link-duplicates true
 registry "https://artifactory.netent.com/artifactory/api/npm/npm-virtual/"
+chromedriver_force_download true
+chromedriver_version "LATEST"
