--- a/examples/example-nightwatch1/package.json
+++ b/examples/example-nightwatch1/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@types/chromedriver": "2.38.0",
     "@types/nightwatch": "^0.9.12",
-    "chromedriver": "^2.46.0",
-    "chromium": "2.1.0",
+    "chromedriver": "^73.0.0",
     "nightwatch": "^1.0.19",
+    "puppeteer": "1.14.0",
     "typescript": "^3.3.3333"
   }
 }
