Force chrome_driver version to be "74.0.3729.6"

--- a/.yarnrc
+++ b/.yarnrc
@@ -5,4 +5,6 @@ progress true
 ignore-optional false
 link-duplicates true
 registry "https://artifactory.netent.com/artifactory/api/npm/npm-virtual/"
-chromedriver_version "LATEST"
+
+# This needs to be in sync with puppeteer chromium version to work reliable
+chromedriver_version "74.0.3729.6"
