--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "workspaces": [
     "examples/*",
-    "config/*"
+    "config/*",
+    "packages/*"
   ],
   "scripts": {
     "build": "lerna run build --parallel --stream",
@@ -32,7 +33,7 @@
     "compile": "yarn compile:root && lerna run compile",
     "compile:root": "tsc --build tsconfig.root.json",
     "fix": "yarn prettier && yarn lint",
-    "install:yarn": "npm install yarn@`node -p -e \"require('./package.json').dependencies.yarn\"` --ignore-scripts --no-save --no-optional --no-package-lock",
+    "install:yarn": "npx yarn@`node -p -e \"require('./package.json').dependencies.yarn\"` --frozen-lockfile --link-duplicates --non-interactive",
     "lint": "tslint -c tslint.json --project tsconfig.root.json --fix && lerna run lint --parallel",
     "postinstall": "git config --local include.path ../.gitconfig && del package-lock.json && node node_modules/husky/husky.js install",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
