--- a/config/helpers-cli/package.json
+++ b/config/helpers-cli/package.json
@@ -5,7 +5,7 @@
   "main": "./helpers-cli.js",
   "private": true,
   "engines": {
-    "node": "10.x",
+    "node": ">= 10.x",
     "yarn": ">= 1.12.x",
     "npm": ">= this-repo-is-yarn-only:see-npmrc"
   },
