--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": ">= 10.x",
     "yarn": ">= 1.12.x",
-    "npm": ">= this-repo-is-yarn-only:see-npmrc"
+    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "main": "src/index.ts",
   "scripts": {
