--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "engines": {
     "node": ">= 10.x",
     "yarn": ">= 1.12.x",
-    "npm":">= 999-this-repo-is-yarn-only:see-npmrc"
+    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "workspaces": [
     "examples/*",
@@ -65,6 +65,12 @@
     "@types/jest": "24.0.11",
     "babel-plugin-loop-optimizer": "1.4.1",
     "del-cli": "1.1.0",
+    "eslint": "5.16.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-standard": "4.0.0",
     "esm": "3.2.21",
     "fs-extra": "7.0.1",
     "husky": "1.3.1",
