--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,9 @@ settings.xml
 
 # Ignore temporary POM-files from GDP
 *-pom.xml
+
+# https://medium.com/@jdxcode/for-the-love-of-god-dont-use-npmignore-f93c08909d8d
+.npmignore
+
+# Avoid using same foldername as 'npm pack'
+package
