--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "@babel/core": "7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/plugin-transform-runtime": "7.4.3",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "7.4.0",
+    "@babel/runtime-corejs3": "7.4.3",
     "@types/fs-extra": "5.0.5",
     "@types/jest": "24.0.11",
     "babel-plugin-loop-optimizer": "1.4.1",
