--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
     "typescript": "^3.4.5",
     "typescript-tslint-plugin": "0.3.1",
     "yarn": "1.15.2"
+  },
+  "devDependencies": {
+    "diff-so-fancy": "1.2.5"
   }
 }
